--- a/Front-End com Firebase/package.json
+++ b/Front-End com Firebase/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.6.8",
     "expo": "^49.0.0",
     "expo-cli": "^6.3.10",
     "expo-font": "~11.4.0",
