--- a/Front-End com Firebase/package.json
+++ b/Front-End com Firebase/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ac1",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "App.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.6.8",
-    "expo": "^49.0.0",
+    "expo": "^51.0.2",
     "expo-cli": "^6.3.10",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
