--- a/Front-End/facens_caronas/package.json
+++ b/Front-End/facens_caronas/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "axios": "^1.6.8",
+    "axios": "^1.7.1",
     "expo": "~51.0.2",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-safe-area-context": "^4.10.1"
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
