--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 Front-End/facens_caronas/node_modules/
 
-Front-End/facens_caronas/Services/firebaseConfig
+Front-End/facens_caronas/Services/firebaseConfig.js
